--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: "build"
 
-on: ["pull_request", "push"]
+on: ["push"]
 
 jobs:
   build:
@@ -15,3 +15,10 @@ jobs:
           java-version: "16"
       - name: "Clean Build"
         run: "./gradlew clean build"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifacts
+          path: |
+            Bukkit/build/libs/PlotSquared-*.jar
