--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,11 @@ jobs:
           distribution: "temurin"
           java-version: "16"
       - name: "Clean Build"
-        run: "./gradlew clean build"
+        run: "./gradlew clean shadowJar"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: artifacts
           path: |
-            Bukkit/build/libs/PlotSquared-*.jar
+            build/libs/PlotSquared-*.jar
